--- a/Hi.ipynb
+++ b/Hi.ipynb
@@ -19,6 +19,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "more titanic stuff today!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('more titanic stuff today!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
